--- a/Angular/udemy-maximillian-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Angular/udemy-maximillian-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,36 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img src="" alt="" class="img-responsive">
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h1></h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <button 
+            type="button"
+            class="btn btn-primary dropdown-toggle">
+            manage recipe <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="">Add ingredients to shopping list</a></li>
+            <li><a href="">Edit recipe</a></li>
+            <li><a href="">Delete recipe</a></li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Description
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Ingredients
+    </div>
+</div>
+
+
